# intelligent-systems-g4

./: .gitignore  01_PROPOSAL.md  02_METHODOLOGY.md  03_BIBLIOGRAPHY.md  04_DEMO_EXPERIMENTS_ANALYSIS.md  BIBLIOGRAPHY.md  README.md
core/: .gitignore  README.md  analyze_data.py  baseline_models.py  compare_datasets.py  compare_results.py  data_preprocessing.py  ensemble_model.py  fix_synthetic_data.py  generate_demo_data.py  generate_improved_dataset.py  generate_synthetic_data.py  main.py  predict.py  predict_improved.py  pyproject.toml  quick_data_check.py  requirements.txt  run_all_improvements.py  run_training.bat  run_training.sh  simulation_engine.py  statistical_tests.py  temporal_validation.py  test_models.py  test_pipeline.py  test_synthetic_data.py  train.py  train_dl_model.py  train_improved.py  train_lstm_precision_focused.py  utils.py  validate_dataset.py  visualize_improvements.py
core/api/: main.py  server.py
core/models/: __init__.py  baseline_models.py  lstm_model.py
core/notebooks/: dataset_exploration.ipynb
core/outputs_v2/dl_models/: checkpoint_epoch_30.pt  checkpoint_epoch_40.pt  final_model.pt
dashboard/: README.md  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: analytics-chart.tsx  app-sidebar.tsx  (+9 more)
notebooks/: 02_eda.ipynb
scripts/: prepare_data.py  run_all.py
solution_1_ml/: __init__.py  train.py
solution_2_dl/: __init__.py  dl_predict.py  dl_route_optimizer.py
testing/: route_optimizer.py  simulation_engine.py  test_models.py
utils/: __init__.py  config.py  data_preprocessing.py
(+49 files in other folders)
